--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -38,5 +38,5 @@
     -GtkWidget-visited-link-color: #ae81ff;
 }
 
-@import url("resource:///org/gnome/HighContrastInverse/a11y.css");
+/* @import url("resource:///org/gnome/HighContrastInverse/a11y.css"); */
 
